# beat-weaver

./: .gitignore  CLAUDE.md  CODEBASE_REFERENCE.md  LEARNINGS.md  LICENSE  PLAN.md  README.md  RESEARCH.md  discovery1.py  discovery2.py  discovery3.py  discovery4.py  discovery5.py  discovery6.py  discovery7.py  discovery8.py  discovery9.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
beat_weaver/: __init__.py  cli.py
beat_weaver/model/: __init__.py  audio.py  config.py  dataset.py  evaluate.py  exporter.py  inference.py  tokenizer.py  training.py  transformer.py
beat_weaver/parsers/: beatmap_parser.py  dat_reader.py  info_parser.py
beat_weaver/pipeline/: batch.py  cache.py  processor.py
beat_weaver/schemas/: detection.py  normalized.py  v2.py  v3.py  v4.py
beat_weaver/sources/: beatsaver.py  local_custom.py  unity_extractor.py
beat_weaver/storage/: writer.py
configs/: large_conformer.json  medium.json  medium_conformer.json  small.json
plans/: 001-data-pipeline.md  002-ml-model.md  003-performance-refactor.md  004-model-improvements.md
tests/: test_audio.py  test_beatsaver_scores.py  test_dataset_filtering.py  test_evaluate.py  test_exporter.py  test_inference.py  test_model.py  test_parsers.py  test_schemas.py  test_tokenizer.py  test_training.py  test_weighted_sampler.py  test_writer.py
