[project]
name = "beat-weaver"
version = "0.1.0"
description = "AI-powered Beat Saber track generator"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "UnityPy>=1.10",
    "pyarrow>=15.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
beat-weaver = "beat_weaver.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
